# toy-game-engine

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
src/game_object/: component.rs  mod.rs
src/scripting/: mod.rs
test-project/: main.lua
