[package]
name = "toy-game-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tealr = { version = "0.9.1", features = ["mlua_lua54","mlua_vendored"]}
uuid = { version = "1.4.1", features = ["v4"]}
